--- a/public/assets/css/colors.css
+++ b/public/assets/css/colors.css
@@ -2,3 +2,14 @@
 {
 	background-color: #6c1d45;
 }
+.content
+{
+	background-color: #f2f2f2;
+}
+
+.header
+{
+	background-color: #f2f2f2;
+	height: 120px;
+	align-content: bottom;
+}
